--- a/news.qmd
+++ b/news.qmd
@@ -2,6 +2,16 @@
 title: "News"
 ---
 
+## Congratulations Josh and Maddy
+
+2022-05-17
+
+This Spring, I bid farewell to two fantastic undergraduate researchers: Maddy LaChance and Josh Fajardo. I have had the great pleasure of working with them for the past few years, even when it was impossible to meet in person. In fact, both carried out their research largely remotely.
+
+Maddy was studying cranial shape in high-activity mice, and Josh was developing tools for studying mouse locomotion. Maddy is moving on to industry, and Josh is taking a gap year while applying to medical school.
+
+There are still manuscripts to work on, so I'll get to interact with them in the coming months and years. I wish them both all the best.
+
 ## Congratulations, Sarah!
 
 2019-05-17
