--- a/news.qmd
+++ b/news.qmd
@@ -6,7 +6,9 @@ title: "News"
 
 2022-05-17
 
-This Spring, I bid farewell to two fantastic undergraduate researchers: Maddy LaChance and Josh Fajardo. I have had the great pleasure of working with them for the past few years, even when it was impossible to meet in person. In fact, both carried out their research largely remotely.
+This Spring, I bid farewell to two fantastic undergraduate researchers: Maddy LaChance and Josh Fajardo, who both graduated from MU.
+
+I have had the great pleasure of working with them for the past few years, even when it was impossible to meet in person. In fact, both carried out their research largely remotely.
 
 Maddy was studying cranial shape in high-activity mice, and Josh was developing tools for studying mouse locomotion. Maddy is moving on to industry, and Josh is taking a gap year while applying to medical school.
 
@@ -42,6 +44,27 @@ I was really honored to be a recipient of a 2019 [Gold Chalk Award](https://gpc.
 ![](images/news/2019-04-24_middleton-gold-chalk.jpg)
 
 :::
+
+## IA at ICVM 2019 in Prague
+
+2019-07-25
+
+A large contingent of Integrative Anatomy students and faculty attended the International Congress of Vertebrate Morphology conference in Prague.
+
+Lab members (past and present) had many presentations:
+
+- *Methods for Visualizing and Comparing Force Vectors in Two- and Three-Dimensions, with Applications for Vertebrate Feeding and Locomotion* (**Middleton KM**, Sellers KC, Cost IN, Spates AT, Holliday CM)
+- *Metabolic and Environmental Factors Shaping the Morphology of Respiratory Turbinates in Mammals and Archosaurs* (**Owerkowicz T**, Poff M, Middleton KM, Crompton AW)
+- *Functional Morphology of the Palate in Varanus exanthematicus (Squamata: Varanidae) and Its Significance for the Evolution of Cranial Kinesis* (**Wilken AT**, Middleton KM, Sellers KC, Cost IN, Holliday CM)
+- *Morphology and Function of the Avian Furcula* (**Sullivan SP**, Middleton KM, Holliday CM)
+- *Joint Loading and Transformation in Suchian Evolution* (**Sellers KC**, Middleton KM, Holliday CM)
+- *Effects of Artificial Selection for Increased Voluntary Wheel Running on Hindlimb Skeletal Shape in Mice* (**Smolinsky AN**, Aldridge K, Castro AA, Garland T, Jr, Middleton KM)
+- *Connecting the Chondrocranium: Biomechanics of the Palatocranial Joints of Sauropsids* (**Holliday CM**, Wilken AT, Bailleul AM, Sellers KC, Cost IN, Rozin
+RE, Middleton KM)
+
+![IA past (Amanda Smolinsky, Henry Tsai, and Eva Herbst) and present (Carol Ward, Kevin Middleton, Kaleb Sellers, Casey Holliday, Alec Wilken, and Emily Lessner)](images/news/2019-07-25-ICVM1.jpg)
+
+![IA and friends](images/news/2019-07-25-ICVM2.jpg)
 
 ## Congratulations, Amanda!
 
