--- a/news.qmd
+++ b/news.qmd
@@ -82,3 +82,70 @@ Her dissertation was titled "Plastic and evolved morphological responses of the 
 
 :::
 
+## MU Life Sciences Week 2018
+
+Sarah and Amanda both presented their doctoral research at the 2018 MU Life Sciences Week.
+
+::: {layout-ncol=2}
+
+![](images/news/2018-04-13_peacock-LSW-2018.jpg)
+
+![](images/news/2018-04-13_smolinsky-LSW-2018.jpg)
+
+:::
+
+## Dinosaurs and Cavemen 2018
+
+The 6th annual Dinosaurs and Cavemen Science Expo was, a always, a huge success.
+
+::: {layout-nrow=10}
+
+![](images/news/2018-03-10_DC_3.JPG)
+
+![](images/news/2018-03-10_DC_9.JPG)
+
+![](images/news/2018-03-10_DC_2.JPG)
+
+![](images/news/2018-03-10_DC_1.JPG)
+
+![](images/news/2018-03-10_DC_4.JPG)
+
+![](images/news/2018-03-10_DC_5.JPG)
+
+![](images/news/2018-03-10_DC_6.JPG)
+
+![](images/news/2018-03-10_DC_7.JPG)
+
+![](images/news/2018-03-10_DC_8.JPG)
+
+![](images/news/2018-03-10_DC_10.JPG)
+
+:::
+
+## MU Health Sciences Research Day 2017
+
+Amanda and Sarah both presented their doctoral research at the 2017 MU Health Sciences Research Day.
+
+::: {layout-ncol=2}
+
+![](images/news/2017-11-09_smolinsky-hsrd-2017.jpg)
+
+![](images/news/2017-11-09_peacock-hsrd-2017.jpg)
+
+:::
+
+## Forthcoming AJPA paper
+
+Sarah Peacock's paper "Predicting the bending properties of long bones: insights from an experimental mouse model" was recently accepted for publication in the American Journal of Physical Anthropology. Congratulations Sarah, with coauthors Brittney Coats (David Speer Academy), Kyle Kirkland (Michigan State University), Corwin Tanner (Blivet Solutions), and Ted Garland, Jr. (UC Riverside).
+
+![Bone cross-sections](images/news/2017-11-08_Peacock_EA_Fig_2.png)
+
+In this paper, we try a new approach for the analysis, Bayesian inference. We preferred this method because it was simpler and more direct that traditional frequestist inference, with the added benefit of being closer to the way that we actually conceptualize such analysis.
+
+We were mainly interested in the differences between groups, which we were able to estimate directly from the posterior samples:
+
+![Differences of posterior distributions.](images/news/2017-11-08_Peacock_EA_Fig_4.png)
+
+So we had to come up with a method for displaying these posterior summaries:
+
+![Posterior summaries of differences.](images/news/2017-11-08_Peacock_EA_Fig_5.png)
