--- a/people.qmd
+++ b/people.qmd
@@ -121,7 +121,7 @@ If you an interested in undergraduate research, send me an email [<i class="fa-s
 
 - Skeletal evolution, Locomotor evolution in vertebrates, Effects of loading on bone phenotypes, Functional morphology
 - PhD University of Missouri, 2018
-- Currently an Assistant Professor at St. Norbert College
+- Currently an Assistant Teaching Professor at Rowan University School of Medicine
 
 ![](images/smolinsky.jpg)
 :::
