--- a/people.qmd
+++ b/people.qmd
@@ -18,7 +18,7 @@ I am an Associate Professor in the [MU Division of Biological Sciences](https://
 
 :::
 
-Previously I was a faculty member in the [Department of Pathology and Anatomical Sciences in the University of Missouri School of Medicine](https://medicine.missouri.edu/departments/pathology-and-anatomical-sciences). From 2007-2012, I was in the [Department of Biology at California State University, San Bernardino](http://biology.csusb.edu/). Prior to that I was a postdoctoral researcher at Brown University and the University of California, Riverside. In deep time, I was an undergraduate at Wake Forest University and then a doctoral student in the [Department of Ecology and Evolutionary Biology at Brown University](http://www.brown.edu/academics/ecology-and-evolutionary-biology/). 
+Previously I was a faculty member in the [Department of Pathology and Anatomical Sciences in the University of Missouri School of Medicine](https://medicine.missouri.edu/departments/pathology-and-anatomical-sciences). From 2007-2012, I was in the [Department of Biology at California State University, San Bernardino](http://biology.csusb.edu/). Prior to that I was a postdoctoral researcher at Brown University and the University of California, Riverside. In deep time, I was an undergraduate at Wake Forest University and then a doctoral student in the [Department of Ecology and Evolutionary Biology at Brown University](http://www.brown.edu/academics/ecology-and-evolutionary-biology/).
 
 If you want to read about bird foot evolution, here's a link to my dissertation: [Morphology, evolution, and function of the avian hallux](http://www.worldcat.org/title/morphology-evolution-and-function-of-the-avian-hallux/oclc/54004056).
 
@@ -46,7 +46,7 @@ If you an interested in graduate study in the Division of Biological Sciences, s
 
 ### Undergraduate Researchers
 
-#### Gabriella Ramirez
+#### Gabi Ramirez
 
 ::: {layout-ncol=2}
 
@@ -56,39 +56,6 @@ If you an interested in graduate study in the Division of Biological Sciences, s
 ![](images/ramirez.jpg)
 :::
 
-
-#### Adam Albright
-
-::: {layout-ncol=2}
-
-- Mechanisms of insect flight, Imaging and CT scanning, Genetics
-- University of Missouri, 2023
-
-![](images/albright.png)
-:::
-
-
-#### Josh Fajardo 
-
-::: {layout-ncol=2}
-
-- Locomotor biomechanics, machine learning, developing tools for studying mouse locomotion
-- University of Missouri, 2022
-
-![](images/fajardo.jpg)
-:::
-
-
-#### Maddy LaChance
-
-::: {layout-ncol=2}
-
-- Cranial morphology in mice, Geometric morphometrics
-- MU Cherng Summer Scholar
-- University of Missouri, 2022
-
-![](images/lachance.jpg)
-:::
 
 :::{.callout-note icon=false}
 
@@ -163,13 +130,29 @@ If you an interested in undergraduate research, send me an email [<i class="fa-s
 
 ### Undergraduate Researchers
 
+#### Adam Albright (2021-2023)
+
+- Mechanisms of insect flight, Imaging and CT scanning, Genetics
+- University of Missouri, 2023
+
+#### Josh Fajardo  (2020-2022)
+
+- Locomotor biomechanics, machine learning, developing tools for studying mouse locomotion
+- University of Missouri, 2022
+
+#### Maddy LaChance (2020-2022)
+
+- Cranial morphology in mice, Geometric morphometrics
+- MU Cherng Summer Scholar
+- University of Missouri, 2022
+
 #### Kayla Robinson (2021-2022)
 
 - MU DBS Honors Student
 
 #### Alec Wilken (2016-2019)
 
-- Currently doctoral student at the University of Chicago
+- PhD University of Chicago, 2026
 
 #### Caitlyn Smith (2016-2018)
 
@@ -198,7 +181,7 @@ If you an interested in undergraduate research, send me an email [<i class="fa-s
 
 #### Tarrin Casey, MD (2014)
 
-- Graduate from the University of Missouri School of Medicine
+- MD University of Missouri School of Medicine
 
 #### Diana Salas (2013)
 
